# VevoLab_Data_Extraction_Helper

./: LICENSE  README.md  VevoLab Data Extraction Helper.py  nuitka.toml  pyproject.toml  requirements.txt  vdeh.py
.github/workflows/: static.yml
docs/: index.html
example data/: tp2.csv  tp3.csv
example metadata settings files/: echo autolv only metadata.xlsx  echo outcome measure example metadata.xlsx  weh column list.xlsx  weh metadata.xlsx
gui/: animal_metadata_form.ui  column_names_form.ui  vdeh_controller.py  vdeh_form.py  vdeh_form.ui  vdeh_model.py  vdeh_subgui_controller.py  vdeh_tests.py
src/vdeh/: __init__.py  main.py
src/vdeh/docs/: index.html
src/vdeh/example data/: 050922BaSH.csv  052322BaSH.csv  053022BaSH.csv
src/vdeh/example metadata settings files/: weh column list.xlsx
src/vdeh/gui/: derived_data_form.ui  model_form.ui  timepoint_data_form.ui  vdeh_controller.py  vdeh_form_lite.ui  vdeh_model.py
